# telegram_client

./: .gitmodules  README.md  build.sh  circle_build.sh  config.env  debug.sh  file.txt  run.sh
Telegram/: CMakeLists.txt  create.bat
Telegram/SourceFiles/: apiwrap.cpp
Telegram/SourceFiles/boxes/: create_poll_box.cpp  edit_caption_box.cpp  send_files_box.cpp  share_box.cpp  star_gift_box.cpp
Telegram/SourceFiles/data/: data_chat.cpp  data_peer.cpp  data_peer.h  data_peer_values.cpp  data_peer_values.h
Telegram/SourceFiles/data/components/: sponsored_messages.cpp
Telegram/SourceFiles/history/: history.cpp  history_widget.cpp  history_widget.h
Telegram/SourceFiles/history/view/: history_view_bottom_info.cpp  history_view_bottom_info.h  history_view_element.h  history_view_message.cpp  history_view_replies_section.cpp  history_view_scheduled_section.cpp  history_view_top_bar_widget.cpp  history_view_top_bar_widget.h
Telegram/SourceFiles/history/view/controls/: history_view_compose_controls.cpp
Telegram/SourceFiles/media/stories/: media_stories_reply.cpp
Telegram/SourceFiles/mtproto/: connection_tcp.cpp  session.h  session_private.cpp
Telegram/SourceFiles/settings/: settings_main.cpp  settings_power_saving.cpp  settings_power_saving.h
Telegram/SourceFiles/settings/business/: settings_chat_links.cpp  settings_shortcut_messages.cpp
Telegram/SourceFiles/support/: support_helper.cpp
Telegram/SourceFiles/ui/boxes/: edit_factcheck_box.cpp
Telegram/SourceFiles/window/: notifications_manager_default.cpp  window_peer_menu.cpp
Telegram/lib_extension/: CMakeLists.txt
Telegram/lib_extension/db/: keys.db
Telegram/lib_extension/extension/buttons/: CMakeLists.txt  icons.h  message_bottom_info.cpp  message_bottom_info.h  settings_buttons.cpp  settings_buttons.h  top_bar_buttons.cpp  top_bar_buttons.h
Telegram/lib_extension/extension/chat_members/: CMakeLists.txt  chat_members.cpp  chat_members.h
Telegram/lib_extension/extension/commands_manager/: CMakeLists.txt  chat_commands_manager.cpp  chat_commands_manager.h  chat_key_creation.cpp  chat_key_creation.h  message_options  message_options.cpp  message_options.h
Telegram/lib_extension/extension/decryption/: CMakeLists.txt  message_text_decryption.cpp  message_text_decryption.h  mtp_buffer_decryption.cpp  mtp_buffer_decryption.h
Telegram/lib_extension/extension/encryption/: CMakeLists.txt  keys_creator.cpp  keys_creator.h  message_text_encryption.cpp  message_text_encryption.h  mtp_buffer_encryption.cpp  mtp_buffer_encryption.h
Telegram/lib_extension/extension/keys_manager/: CMakeLists.txt  build.sh  dh.cpp  dh.h  keys_creator.cpp  keys_creator.h  keys_format.cpp  keys_format.h  keys_manager  keys_manager.cpp  keys_manager.h
Telegram/lib_extension/extension/local_storage/: CMakeLists.txt  keys_db.cpp  keys_db.h  local_storage.cpp  local_storage.h  start
Telegram/lib_extension/test/: CMakeLists.txt
Telegram/lib_extension/test/keys_manager/: test.cpp  test.h
Telegram/lib_tl/tl/: generate_tl.py
Telegram/lib_ui/ui/text/: text_renderer.cpp
Telegram/lib_ui/ui/widgets/fields/: input_field.cpp  input_field.h
